add estrutura de pastas

--- a/interface_publicacao.html
+++ b/interface_publicacao.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" media="all" href="css/src/interface_publicacao.css" />
     <title>Interface de publicação</title>
 </head>
 <body>
