--- a/interface_publicacao.html
+++ b/interface_publicacao.html
@@ -8,30 +8,38 @@
 <body>
 
 <header>
-    <h2>INTERFACE DE PUBLICAÇÃO</h2>
-    <div id="perfil">
-        <figure><img src="" alt=""></figure>
-        <div class="name">
-
+    <div class="center">
+        <h2>INTERFACE DE PUBLICAÇÃO</h2>
+        <div id="perfil">
+            <figure><img src="images/ico-perfil.png" alt=""></figure>
+            <div class="name">
+                Zé<br> Ninguém
+            </div>
         </div>
     </div>
 </header>
 
-<nav id="system">
-    <ul>
-        <li><a href="javascript:;">Cadastro de novos produtos</a></li>
-        <li><a href="javascript:;">Produtos cadastrados</a></li>
-        <li><a href="javascript:;">Edição de produtos</a></li>
-    </ul>
-</nav>
+<main>
+    <nav id="system">
+        <div class="center">
+            <ul>
+                <li><a href="javascript:;">Cadastro de novos produtos /</a></li>
+                <li><a href="javascript:;">Produtos cadastrados /</a></li>
+                <li><a href="javascript:;">Edição de produtos</a></li>
+            </ul>
+        </div>
+    </nav>
 
-<nav id="dashboard">
-    <ul>
-        <li><a href="javascript:;">PRODUTOS</a></li>
-        <li><a href="javascript:;">ADMINISTRAÇÃO</a></li>
-        <li><a href="javascript:;">HISTÓRICO DE PUBLICAÇÕES</a></li>
-        <li><a href="javascript:;">PUBLICAÇÃO</a></li>
-    </ul>
-</nav>
+    <nav id="dashboard">
+        <div class="center">
+            <ul>
+                <li><img src="images/ico-dashboard/produtos.png"><a href="javascript:;">PRODUTOS</a></li>
+                <li><img src="images/ico-dashboard/administrador.png"><a href="javascript:;">ADMINISTRAÇÃO</a></li>
+                <li><img src="images/ico-dashboard/historico.png"><a href="javascript:;">HISTÓRICO DE <br>PUBLICAÇÕES</a></li>
+                <li><img src="images/ico-dashboard/publicacao.png"><a href="javascript:;">PUBLICAÇÃO</a></li>
+            </ul>
+        </div>
+    </nav>
+</main>
 </body>
 </html>
