Deletando arquivos.scss

--- a/produtos_cadastrados.html
+++ b/produtos_cadastrados.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" media="all" href="css/src/main.css" />
     <link rel="stylesheet" media="all" href="css/src/interface_publicacao.css" />
     <title>Interface de publicação</title>
 </head>
@@ -9,7 +10,7 @@
 
 <header>
     <div class="center">
-        <h2>INTERFACE DE PUBLICAÇÃO</h2>
+        <h2>PRODUTOS CADASTRADOS</h2>
         <div id="perfil">
             <figure><img src="images/ico-perfil.png" alt=""></figure>
             <div class="name">
@@ -18,6 +19,12 @@
         </div>
     </div>
 </header>
+
+<main>
+    <div class="center">
+
+    </div>
+</main>
 
 </body>
 </html>
