--- a/produtos_cadastrados.html
+++ b/produtos_cadastrados.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" media="all" href="css/src/main.css" />
-    <link rel="stylesheet" media="all" href="css/src/interface_publicacao.css" />
     <title>Interface de publicação</title>
 </head>
 <body>
@@ -22,7 +21,31 @@
 
 <main>
     <div class="center">
+        <div id="produtos_cadastrados">
+            <form>
+                <div class="form-item">
+                    <label for="produto">
+                        Produto
+                    </label>
 
+                    <input id="produto" placeholder="Deus salve o Rei" type="text" class="black">
+                    <input type="image" src="images/lupa.png">
+                </div>
+            </form>
+
+            <div id="recive">
+
+            </div>
+
+            <div class="buttons">
+                <div class="left">
+                    <button class="white">Editar</button>
+                </div>
+                <div class="right">
+                    <button class="red">Apagar</button>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
