--- a/produtos_cadastrados.html
+++ b/produtos_cadastrados.html
@@ -22,6 +22,13 @@
 <main>
     <div class="center">
         <div id="produtos_cadastrados">
+
+            <div class="new-product">
+                Produtos cadastrados
+            </div>
+
+            <div class="clear"></div>
+
             <form>
                 <div class="form-item">
                     <label for="produto">
