--- a/novo_produto.html
+++ b/novo_produto.html
@@ -129,5 +129,7 @@
     </div>
 </main>
 
+<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
 </body>
 </html>
