--- a/novo_produto.html
+++ b/novo_produto.html
@@ -75,6 +75,8 @@
                 <div class="block-left">
                     <label for="ator">Ator *</label>
                     <input type="text" name="" value="" placeholder="Ator" id="ator">
+
+                    <div class="recive-list"></div>
                 </div>
                 <div class="settings">
                     <div class="add"> + </div>
@@ -86,6 +88,8 @@
                 <div class="block-left">
                     <label for="ator">Diretor *</label>
                     <input type="text" name="" value="" placeholder="Diretor" id="diretor">
+
+                    <div class="recive-list"></div>
                 </div>
                 <div class="settings">
                     <div class="add"> + </div>
@@ -99,6 +103,8 @@
                 <div class="block-left">
                     <label for="ator">Autor</label>
                     <input type="text" name="" value="" placeholder="Autor" id="Autor">
+
+                    <div class="recive-list"></div>
                 </div>
                 <div class="settings">
                     <div class="add"> + </div>
