add botao de add produtos

--- a/produtos_cadastrados.html
+++ b/produtos_cadastrados.html
@@ -23,7 +23,7 @@
     <div class="center">
         <div id="produtos_cadastrados">
 
-            <div class="new-product">
+            <div class="new-button">
                 Produtos cadastrados
             </div>
 
