--- a/novo_produto.html
+++ b/novo_produto.html
@@ -22,6 +22,13 @@
 
 <main>
     <div class="center">
+
+        <div class="new-button">
+            Produtos cadastrados
+        </div>
+
+        <div class="clear"></div>
+
         <p class="title">INFORMAÇÕES DO PRODUTO</p>
 
         <form class="valida_form" action="/" method="post">
