Pagina de historico de publicacao done

--- a/historico_publicacao.html
+++ b/historico_publicacao.html
@@ -58,23 +58,129 @@
             </form>
 
             <div class="block">
+                <div class="status_publicacao rascunho">RASCUNHO</div>
                 <div class="info-block">
-                    <figure><img src="images/thumb-video.png"></figure>
-                    <ul>
-                        <li>Nome do produto: <span></span></li>
-                        <li>Título do episódio: <span></span></li>
-                        <li>N&#176; do episodio: <span></span></li>
-                        <li>Data de publicação: <span></span></li>
-                        <li>Hora da publicação: <span></span></li>
-                    </ul>
+                    <div class="block-left">
+                        <figure><img src="images/thumb-video.png"></figure>
+                        <div class="settings">
+                            <figure class="fullscreen">
+                                <img src="images/ico-block.png" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="block-right">
+                        <ul>
+                            <li>Nome do produto: <span></span></li>
+                            <li>Título do episódio: <span></span></li>
+                            <li>N&#176; do episodio: <span></span></li>
+                            <li>Data de publicação: <span></span></li>
+                            <li>Hora da publicação: <span></span></li>
+                            <li>HD: <span></span></li>
+                        </ul>
+
+                        <div class="buttons">
+                            <button class="publicacao">Editar</button>
+                            <button class="white">Publicar</button>
+                            <button class="white">Excluir</button>
+                        </div>
+                    </div>
 
                     <div class="clear"></div>
-
-                    <div class="settings">
-
-                    </div>
                 </div>
             </div>
+
+            <div class="block">
+                <div class="status_publicacao processo">EM PROCESSO</div>
+                <div class="info-block">
+                    <div class="block-left">
+                        <figure><img src="images/thumb-video.png"></figure>
+                        <div class="settings">
+                            <figure class="fullscreen">
+                                <img src="images/ico-block.png" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="block-right">
+                        <ul>
+                            <li>Nome do produto: <span></span></li>
+                            <li>Título do episódio: <span></span></li>
+                            <li>N&#176; do episodio: <span></span></li>
+                            <li>Data de publicação: <span></span></li>
+                            <li>Hora da publicação: <span></span></li>
+                            <li>HD: <span></span></li>
+                        </ul>
+
+                        <div class="buttons">
+                            <button class="publicacao">Visualizar</button>
+                        </div>
+                    </div>
+
+                    <div class="clear"></div>
+                </div>
+            </div>
+
+            <div class="block">
+                <div class="status_publicacao publicado">PUBLICADO</div>
+                <div class="info-block">
+                    <div class="block-left">
+                        <figure><img src="images/thumb-video.png"></figure>
+                        <div class="settings">
+                            <figure class="fullscreen">
+                                <img src="images/ico-block.png" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="block-right">
+                        <ul>
+                            <li>Nome do produto: <span></span></li>
+                            <li>Título do episódio: <span></span></li>
+                            <li>N&#176; do episodio: <span></span></li>
+                            <li>Data de publicação: <span></span></li>
+                            <li>Hora da publicação: <span></span></li>
+                            <li>HD: <span></span></li>
+                        </ul>
+
+                        <div class="buttons">
+                            <button class="publicacao">Visualizar</button>
+                            <button class="white">Excluir</button>
+                        </div>
+                    </div>
+
+                    <div class="clear"></div>
+                </div>
+            </div>
+
+            <p class="title"></p>
+
+            <div id="paginacao">
+                <a class="prev" href="javascript">< Anterior</a>
+                <ul>
+                    <li><a href="javascript:;">...</a></li>
+                    <li><a href="javascript:;">1</a></li>
+                    <li><a href="javascript:;">2</a></li>
+                    <li><a href="javascript:;">3</a></li>
+                    <li><a href="javascript:;">4</a></li>
+                    <li><a href="javascript:;">5</a></li>
+                    <li><a href="javascript:;">6</a></li>
+                    <li><a href="javascript:;">7</a></li>
+                    <li><a href="javascript:;">8</a></li>
+                    <li><a href="javascript:;">9</a></li>
+                    <li><a href="javascript:;">10</a></li>
+                    <li><a href="javascript:;">11</a></li>
+                    <li><a href="javascript:;">12</a></li>
+                    <li><a href="javascript:;">13</a></li>
+                    <li><a href="javascript:;">14</a></li>
+                    <li><a href="javascript:;">15</a></li>
+                    <li><a href="javascript:;">16</a></li>
+                    <li><a href="javascript:;">17</a></li>
+                    <li><a href="javascript:;">18</a></li>
+                    <li><a href="javascript:;">19</a></li>
+                    <li><a href="javascript:;">20</a></li>
+                    <li><a href="javascript:;">...</a></li>
+                </ul>
+                <a class="next" href="javascript">< Anterior</a>
+            </div>
+            <div class="clear"></div>
         </div>
     </div>
 </header>
