--- a/produtos_cadastrados.html
+++ b/produtos_cadastrados.html
@@ -40,6 +40,7 @@
                 </div>
             </form>
 
+            <div class="clear"></div>
             <div id="recive">
 
             </div>
