Ajuste pagina de cadastrar produto

--- a/novo_produto.html
+++ b/novo_produto.html
@@ -37,7 +37,7 @@
                 <input type="text" id="titulo" value="" name="">
             </div>
 
-            <div class="form-item">
+            <div class="form-item validar">
                 <label for="sinopse">Sinopse *</label>
                 <textarea id="sinopse" name=""></textarea>
             </div>
